// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test adding custom className to Container control 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className="test-classname"
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id="testid"
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Container"
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title=""
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Container__ContainerView
    className="ui-container test-classname"
    height={null}
    id="testid"
    minHeight={null}
    sizing="normal"
    style={Object {}}
  >
    <p>
      Test Container
    </p>
  </Container__ContainerView>
</Wrapper>
`;

exports[`Test creation of a Container control 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Container"
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title=""
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Container__ContainerView
    className="ui-container"
    height={null}
    id={null}
    minHeight={null}
    sizing="normal"
    style={Object {}}
  >
    <p>
      Test Container
    </p>
  </Container__ContainerView>
</Wrapper>
`;

exports[`Test creation of a Container control with an id value 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id="testid"
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Container"
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title=""
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Container__ContainerView
    className="ui-container"
    height={null}
    id="testid"
    minHeight={null}
    sizing="normal"
    style={Object {}}
  >
    <p>
      Test Container
    </p>
  </Container__ContainerView>
</Wrapper>
`;

exports[`Test retrieval of Container props object 1`] = `
Object {
  "backgroundColor": null,
  "borderColor": null,
  "bottom": null,
  "children": null,
  "className": null,
  "color": null,
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "id": null,
  "left": null,
  "location": "none",
  "minHeight": null,
  "minWidth": null,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "notooltip": false,
  "obj": "Container",
  "padding": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "title": "",
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;

exports[`Test retrieval of Container props object 2`] = `
Object {
  "children": null,
  "classes": b {
    "_classes": Map {
      "ui-container" => true,
    },
    "_clstr": "",
    "_delimiter": " ",
    "_dirty": true,
    "_obj": null,
    "delete": [Function],
    "reset": [Function],
  },
  "sizing": "normal",
  "style": Object {},
}
`;
